# vrcli

./: Cargo.toml  LICENSE  Makefile  README.md  clippy.toml
.github/workflows/: auto-format.yml  ci.yml  dependencies.yml  release.yml  security.yml
example/: random_reqin.ps1  random_reqin.sh
scripts/: apply-clippy-fixes.ps1  dev.ps1  fix-format-strings.ps1  pre-commit.ps1
src/: auth_client.rs  commands.rs  config.rs  debug_api.rs  demo.rs  lib.rs  main.rs
src/commands/: auth.rs  friends.rs
src/commands/auth/: handlers.rs  login.rs  mod.rs  two_factor.rs  utils.rs  verification.rs
src/commands/friends/: add.rs  display.rs  fetcher.rs  formatter.rs  handlers.rs  handlers_v2.rs  list.rs  mod.rs  remove.rs  show.rs  sorting.rs  status.rs  table_adapter.rs  utils.rs
src/commands/invite/: handlers.rs  mod.rs
src/commands/users/: fetcher.rs  handlers.rs  mod.rs  sorting.rs  table_adapter.rs  utils.rs
src/commands/world/: mod.rs  table_adapter.rs
src/commands/worlds/: fetcher.rs  handlers.rs  mod.rs  table_adapter.rs
src/common/: auth_client.rs  command_utils.rs  display_options.rs  formatter.rs  mod.rs  output_options.rs  table.rs  user_operations.rs  utils.rs  world_tags.rs
tests/: lib.rs
tests/fixtures/: mock_responses.rs
tests/integration/: cli_tests.rs
