[package]
name = "vrcli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
vrchatapi = "1.20.0"
inquire = "0.7"
reqwest = { version = "0.12", features = ["cookies"] }
url = "2.0"
open = "5.0"
futures = "0.3"
unicode-width = "0.1"
colored = "2.0"
cargo-husky = "1"

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["precommit-hook", "run-cargo-clippy"] }
