[package]
name = "vrcli"
version = "0.1.0"
edition = "2021"
authors = ["vrcli contributors"]
description = "A command-line interface for the VRChat API that lets you manage friends, users, worlds, and authentication directly from your terminal"
readme = "README.md"
homepage = "https://github.com/VRCli/vrcli"
repository = "https://github.com/VRCli/vrcli"
license = "MIT"
keywords = ["vrchat", "api", "cli", "command-line", "social"]
categories = ["command-line-utilities", "api-bindings"]
exclude = [
    "reference/",
    "scripts/",
    "target/",
    ".github/",
    "tests/fixtures/",
]

[[bin]]
name = "vrcli"
path = "src/main.rs"

[lib]
name = "vrcli"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
vrchatapi = "1.20.0"
inquire = "0.7"
reqwest = { version = "0.12", features = ["cookies"] }
url = "2.0"
open = "5.0"
futures = "0.3"
unicode-width = "0.1"
colored = "2.0"

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["precommit-hook", "run-cargo-clippy"] }
tokio-test = "0.4"
mockito = "1.0"
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
wiremock = "0.5"

[package.metadata.husky]
hooks = ["pre-commit"]

[package.metadata.husky.pre-commit]
script = "cargo clippy --all-targets --all-features -- -D warnings"